feat: profile for users for room permissions
